<resources>
    <string name="app_name">MOBV Zadanie</string>
    <string name="title_login">Login</string>
    <string name="title_intro">Intro</string>
    <string name="title_signup">Registration</string>
    <string name="mapbox_access_token">pk.eyJ1IjoieGhhbmNha3MiLCJhIjoiY2wybGt5ZzhoMG9mNTNjcGt5cW5vbDd2ZiJ9.kbctbyxA8_OgWl9eer1fpw</string>

    <string name="main_title">Assignment</string>
    <string name="email">Email</string>
    <string name="zadajte_email">Insert email</string>
    <string name="username">Username</string>
    <string name="zadajte_username">Insert username</string>
    <string name="heslo">Password</string>
    <string name="zadajte_heslo">Insert password</string>
    <string name="zopakujte_heslo">Repeat password</string>
    <string name="registruj_sa">Register</string>
    <string name="prihlasit_sa">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">Profile</string>
    <string name="nacitaj_profil">Load profile</string>
    <string name="odhlasit_sa">Log out</string>
    <string name="share_location">Share my location</string>
    <string name="back">Back</string>
    <string name="profile_user_pic">User\'s picture</string>
    <string name="map_icon_desc">Map icon</string>
    <string name="feed_icon_desc">Feed icon</string>
    <string name="profile_icon_desc">Profile icon</string>
    <string name="share_location_time_limited">Share my location (10am - 17pm)</string>
    <string name="change_password">Change password</string>
    <string name="map_center_btn">Back to my location</string>
    <string name="item_image_desc">User\'s profile image</string>
    <string name="title_change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="old_password_placeholder">Insert old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_placeholder">Insert new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_placeholder">Insert new password again</string>
    <string name="choose_image">Choose image</string>
    <string name="upload_image">Upload image</string>
    <string name="change_profile_pic">Change picture</string>
    <string name="delete_image">Delete current profile picture</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="location_title">Location access required</string>
    <string name="location_desc">To see users around you, please enable location permissions.</string>
    <string name="location_btn">Go to profile</string>
    <string name="password_manager">Password manager</string>
</resources>